syntax = "proto3";
package client_scope;

option go_package = "nfxid/protos/gen/clients/client_scope;clientscopepb";

import "google/protobuf/timestamp.proto";

// 客户端作用域信息
message ClientScope {
  string id = 1;                           // 作用域ID (UUID)
  string app_id = 2;                       // 应用ID (UUID)
  string scope = 3;                        // 作用域 (varchar(255))
  optional string granted_by = 4;         // 授予者ID (UUID)
  google.protobuf.Timestamp granted_at = 5;    // 授予时间
  optional google.protobuf.Timestamp expires_at = 6; // 过期时间
  google.protobuf.Timestamp created_at = 7;     // 创建时间
  optional google.protobuf.Timestamp revoked_at = 8; // 撤销时间
  optional string revoked_by = 9;         // 撤销者ID (UUID)
  optional string revoke_reason = 10;     // 撤销原因 (text)
}

// ClientScope 服务 - 供其他服务通过 gRPC 管理客户端作用域
service ClientScopeService {
  // 根据ID获取客户端作用域
  rpc GetClientScopeByID (GetClientScopeByIDRequest) returns (GetClientScopeByIDResponse);
  
  // 根据应用ID获取作用域列表
  rpc GetClientScopesByAppID (GetClientScopesByAppIDRequest) returns (GetClientScopesByAppIDResponse);
}

// ClientScope Service Messages
message GetClientScopeByIDRequest {
  string id = 1;
}

message GetClientScopeByIDResponse {
  ClientScope client_scope = 1;
}

message GetClientScopesByAppIDRequest {
  string app_id = 1;
}

message GetClientScopesByAppIDResponse {
  repeated ClientScope client_scopes = 1;
}
